Add delete product image handler
